--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,9 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
+        vectorDrawables{
+            useSupportLibrary true
+        }
         applicationId "com.example.myapplication"
         minSdkVersion 16
         targetSdkVersion 30
@@ -40,6 +43,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
     implementation files('libs\\android-zoom-view.jar')
+    //implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0-rc01'
 
 
     testImplementation 'junit:junit:4.+'
