--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             android:label="@string/title_activity_music_list"
             android:theme="@style/Theme.MyApplication.NoActionBar"></activity>
         <activity android:name=".ClickedItemActivity" />
+        <activity android:name=".VideoListActivity"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
