--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         }
         applicationId "com.example.myapplication"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
@@ -35,6 +35,9 @@ android {
 }
 
 dependencies {
+
+
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
